--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -17,7 +17,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <!--Change student name here-->
-    <title>Student Name | CTRL Z</title>
+    <title> Neil Grech | CTRL Z</title>
 </head>
 
 <body>
@@ -226,25 +226,22 @@
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3> Neil Grech</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
                 <h2>Interaction in Performance</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
-                    metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
-                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
-                    nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.</p>
+                <p>
+The human body is the expressive palette of our imagination. We act and react, move, stand and behave 
+in conformity with our thoughts feelings and emotions. 
+I became intrigued by the fact that anything we perceive around us might affect us. 
+I wanted to understand better the cause and effect on the human being as a performer in dance.  
+Where does the rehearsing stop and where does the individual expression and improvisation start? 
+Can the visual surroundings add or morph the interrelationship between dance and music? 
+The intention of this exhibition is to provide this experience to anyone who would like to try 
+out what effect the visual aspects has on your physical and mental state and how your 
+body then reacts to it. </p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
