button in middle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- INCREASE VIDEO LENGTH TO 15-20MINS -->
         </div>
 
-        <div class="overvideo">
+        <div class="container overvideo">
             <h4>Ctrl Z - BFA Online Exhibition 2020</h4>
             <a href="group_page.html"><button type="button" id="buttonvideo"
                     class="btn btn-outline-dark text-uppercase">Enter Exhibition</button></a>
