updated group page images

--- a/group_page.html
+++ b/group_page.html
@@ -201,7 +201,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/gayle_casha/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/gayle_casha.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Casha Gayle</h6>
@@ -320,7 +321,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/adreana_gravino/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/adreana_gravino.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Gravino Adreana</h6>
@@ -421,7 +423,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/lisa_kaehler_m/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/lisa_kaehler.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Kaehler Lisa Marie</h6>
@@ -488,7 +491,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/giulia_micallef/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/giulia_micallef.jpg"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Micallef Giulia</h6>
