--- a/group_page.html
+++ b/group_page.html
@@ -491,7 +491,7 @@
             <div class="col-md-3 col-6">
                 <a href="students/giulia_micallef/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/group_page_images/giulia_micallef.jpg"
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/giulia_micallef.png"
                             alt="">
                     </div>
                     <div class="piece_text">
