--- a/students/rakel_vella/index.html
+++ b/students/rakel_vella/index.html
@@ -207,22 +207,23 @@
                     </div>
                 </div>
                 <h2>The Glass Box</h2>
-                <p>The Glass Box is an interactive sculpture built using a Raspberry Pi connected to a thermal printer
-                    and an ultrasonic sensor. The sensor is
-
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
-                    metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
-                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
-                    nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.</p>
+                <p>The Glass Box was built with the purpose of sensitizing the viewer on online surveillance,
+                    encompassing the feeling of being watched. It is an
+                    interactive sculpture built using a Raspberry Pi connected to a thermal printer
+                    and an ultrasonic sensor. The sensor, built into one of the fake cctv cameras, is constantly
+                    detecting the proximity to the viewer that
+                    approaches the installation. Once the viewer gets close, the thermal printer prints out a log of
+                    data. The data that is being printed out was gathered from six participants that took part in an
+                    anonymous focus group. The participants sent their google takeout, which includes data such as;
+                    google searches,
+                    location history, transactions and audio recordings. A database of over 200 google queries dating
+                    back to 2011 was compiled and linked to the code that runs the program on the Raspberry Pi
+                    connecting the printer and the sensor.
+                    <br>
+                    <br> 
+                    In the matter of the pandemic, an online implementation of The Glass Box was carried out where
+                    one can print out a log of data with the press of a button and see it livestreamed. The
+                    livestream will be online from 29/05/20 till 05/06/20 at the link indicated below.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
