--- a/students/test/index.html
+++ b/students/test/index.html
@@ -285,14 +285,13 @@
     <div data-aos="fade-up" class="container-fluid container-3 gallery-section">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image" src="http://placehold.it/200x300" alt="">
+                <a href="http://www.google.com"><img class="img-fluid" data-lightbox="image" src="http://placehold.it/200x300" alt=""></a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image-1" src="http://placehold.it/500x300" alt="">
-
+                <a href="http://www.google.com"><img class="img-fluid" src="http://placehold.it/500x300" alt=""></a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image-2" src="http://placehold.it/300x300" alt="">
+                <img class="img-fluid" src="http://placehold.it/300x300" alt="">
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
