--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -230,13 +230,9 @@
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Project Name</h2>
+                <h2>Neil Grech</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                <p>Hello I am neil grech 
                     Mauris ultricies, justo eu convallis placerat,
                     felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
                     gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
