--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -246,8 +246,8 @@ body then reacts to it. </p>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul>
-                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
-                    <li><a href="https://r4k.buzz/dump-your-data.html" target="_blank">Artist's Website</a></li>
+                    <li><a href="https://nisga.com.mt/" target="_blank">Nisġa</a></li>
+                    <li><a href="https://neilgrech.com/" target="_blank"> Neil Grech </a></li>
                 </ul>
             </div>
         </div>
