--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -226,11 +226,11 @@
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3>Neil Gerech</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Neil Grech</h2>
+                <h2>Liquid light</h2>
                 <!--Change you project description here, max 150 words-->
                 <p>Hello I am neil grech 
                     Mauris ultricies, justo eu convallis placerat,
