--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -17,7 +17,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <!--Change student name here-->
-    <title>Student Name | CTRL Z</title>
+    <title> Neil Grech | CTRL Z</title>
 </head>
 
 <body>
